--- a/front/package.json
+++ b/front/package.json
@@ -8,16 +8,25 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-oauth/google": "^0.11.0",
     "@remix-run/css-bundle": "^1.18.1",
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
     "@remix-run/serve": "^1.18.1",
+    "intl-parse-accept-language": "^1.0.0",
     "isbot": "^3.6.8",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-time-ago": "^7.2.1",
     "remix-auth": "^3.5.0",
-    "remix-auth-socials": "^2.0.5"
+    "remix-auth-socials": "^2.0.5",
+    "remix-utils": "^6.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.18.1",
