--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
+    "semistandard": "^17.0.0",
     "typescript": "^5.0.4"
   },
   "engines": {
